--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "     Research    "
+  - title: "_______Research________"
     url: /research1/
     
   - title: "     CV      "
